[package]
name = "shell-runtime"
description = "The Integritee shell parachain runtime"
# major.minor revision must match collator node. patch should match spec_version
version = "1.7.13"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/parachain"
edition = "2021"

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

parachains-common = { path = "../common", default-features = false }

# Substrate dependencies
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# added by integritee
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-vesting = { workspace = true }

# Cumulus dependencies
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
parachain-info = { workspace = true }

# Polkadot dependencies
pallet-xcm = { workspace = true }
pallet-xcm-transactor = { workspace = true }
polkadot-parachain = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# other integritee deps
xcm-transactor-primitives = { workspace = true }

# orml
orml-traits = { workspace = true }
orml-xcm = { workspace = true }
orml-xcm-support = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "parachains-common/std",
    "sp-api/std",
    "sp-std/std",
    "sp-io/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-version/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-block-builder/std",
    "sp-transaction-pool/std",
    "sp-inherents/std",
    "frame-support/std",
    "frame-executive/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "parachain-info/std",
    "orml-traits/std",
    "orml-xcm/std",
    "orml-xcm-support/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-utility/std",
    "xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "xcm-transactor-primitives/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-aura/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-vesting/std",
    "pallet-xcm-transactor/std",
    "pallet-xcm/std",
    "cumulus-pallet-aura-ext/std",
    "sp-consensus-aura/std",
]
# Weird cargo behaviour: We have to feature gate the `runtime-benchmarks` behind
# a feature here. Otherwise the feature is automatically activated in dependencies
# when we compile the whole workspace with the `runtime-benchmarks` feature, which
# leads to compiler erros in the `shell-runtime` because the benchmarks are not
# implemented.
runtime-benchmarks = [
    "pallet-xcm/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
]

try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-system/try-runtime",
    "frame-executive/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "orml-xcm/try-runtime",
    "parachain-info/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-vesting/try-runtime",
    "pallet-xcm/try-runtime",
    "pallet-xcm-transactor/try-runtime",
]
