[package]
name = "kusama-polkadot-system-emulated-network"
authors.workspace = true
edition.workspace = true
version = "1.18.0"
license = "Apache-2.0"
description = "Kusama<>Polkadot emulated bridged network"
publish = false

[dependencies]

# Cumulus
emulated-integration-tests-common = { workspace = true }

# Runtimes
asset-hub-kusama-emulated-chain = { workspace = true }
asset-hub-polkadot-emulated-chain = { workspace = true }
bridge-hub-kusama-emulated-chain = { workspace = true }
bridge-hub-polkadot-emulated-chain = { workspace = true }
kusama-emulated-chain = { workspace = true }
polkadot-emulated-chain = { workspace = true }

integritee-kusama-emulated-chain = { workspace = true }
integritee-polkadot-emulated-chain = { workspace = true }

[features]
runtime-benchmarks = [
    "asset-hub-kusama-emulated-chain/runtime-benchmarks",
    "asset-hub-polkadot-emulated-chain/runtime-benchmarks",
    "bridge-hub-kusama-emulated-chain/runtime-benchmarks",
    "bridge-hub-polkadot-emulated-chain/runtime-benchmarks",
    "kusama-emulated-chain/runtime-benchmarks",
    "integritee-kusama-emulated-chain/runtime-benchmarks",
    "integritee-polkadot-emulated-chain/runtime-benchmarks",
    "polkadot-emulated-chain/runtime-benchmarks",
]
