[package]
name = "bridge-hub-ik-to-ip-integration-tests"
authors.workspace = true
edition.workspace = true
version = "1.18.0"
license = "Apache-2.0"
description = "Bridge Hub Kusama runtime integration tests with xcm-emulator"
publish = false

[dependencies]
parity-scale-codec = { workspace = true, default-features = true }
scale-info = { features = ["derive"], workspace = true }
hex-literal = { workspace = true }

# Substrate
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-asset-conversion = { workspace = true, default-features = true }
pallet-assets = { workspace = true, default-features = true }
pallet-message-queue = { workspace = true, default-features = true }

# Polkadot
xcm = { workspace = true, default-features = true }
pallet-xcm = { workspace = true, default-features = true }
xcm-executor = { workspace = true, default-features = true }
xcm-runtime-apis = { workspace = true, default-features = true }

# Cumulus
emulated-integration-tests-common = { workspace = true }
parachains-common = { workspace = true, default-features = true }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = true }

# Bridges
bp-messages = { workspace = true, default-features = true }
pallet-bridge-messages = { workspace = true, default-features = true }

# Runtimes Repo
bp-bridge-hub-kusama = { workspace = true, default-features = true }
bridge-hub-kusama-runtime = { workspace = true }
integration-tests-helpers = { workspace = true }
kusama-polkadot-system-emulated-network = { workspace = true }
system-parachains-constants = { workspace = true, default-features = true }

# Snowbridge
snowbridge-beacon-primitives = { workspace = true, default-features = true }
snowbridge-core = { workspace = true, default-features = true }
snowbridge-inbound-queue-primitives = { workspace = true, default-features = true }
snowbridge-pallet-system = { workspace = true, default-features = true }
snowbridge-pallet-outbound-queue = { workspace = true, default-features = true }
snowbridge-pallet-inbound-queue-fixtures = { workspace = true }

# Local
#integritee-kusama-runtime = { workspace = true, default-features = true}
#integritee-polkadot-runtime = { workspace = true, default-features = true}

[features]
runtime-benchmarks = [
	"bp-bridge-hub-kusama/runtime-benchmarks",
	"bridge-hub-kusama-runtime/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"integration-tests-helpers/runtime-benchmarks",
	"kusama-polkadot-system-emulated-network/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"snowbridge-core/runtime-benchmarks",
	"snowbridge-inbound-queue-primitives/runtime-benchmarks",
	"snowbridge-pallet-inbound-queue-fixtures/runtime-benchmarks",
	"snowbridge-pallet-outbound-queue/runtime-benchmarks",
	"snowbridge-pallet-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"system-parachains-constants/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"xcm-runtime-apis/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
