[package]
name = "integritee-kusama-emulated-chain"
authors.workspace = true
edition.workspace = true
version = "1.18.0"
license = "Apache-2.0"
description = "Integritee Kusama emulated chain used for integration tests"
publish = false


[dependencies]
# Substrate
sp-core = { workspace = true, default-features = true }
sp-keyring = { workspace = true }
frame-support = { workspace = true, default-features = true }

# Cumulus
parachains-common = { workspace = true, default-features = true }
cumulus-primitives-core = { workspace = true, default-features = true }
emulated-integration-tests-common = { workspace = true }
xcm = { workspace = true, default-features = true }
xcm-builder = { workspace = true, default-features = true }
polkadot-parachain-primitives = { workspace = true }

pallet-porteer = { workspace = true, default-features = true }

# Runtimes
integritee-kusama-runtime = { workspace = true, default-features = true }

# Emulated tests
integration-tests-helpers = { workspace = true }

[features]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"integritee-kusama-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"integration-tests-helpers/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
